# MiniDNN

./: CMakeLists.txt
include/: Network.h
include/Utils/: IO.h  MiniDNNStream.h
tutorials/mnist/: .gitignore  CMakeLists.txt  Profiler.cpp  Profiler.h  mnist.cpp
tutorials/test1/: CMakeLists.txt  test1.cpp
tutorials/test2/: CMakeLists.txt  test2.cpp
